--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -177,8 +177,12 @@
                   </div>
                 </span>
                 <ul class="submenu">
+                    <div class="parent-wrapper">
+                        <div class="child-wrapper">
                   <li [routerLink]="['/venue-listing']">Venue Listing</li>
                   <li [routerLink]="['/add-venue']">Add Venue</li>
+                  </div>
+                  </div>
                 </ul>
               </a>
             </li>
