--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -108,7 +108,7 @@
 
     <mat-card>
       <div class="col-md-12 dashboard-heading-wrapper">
-        <p><span class="master-heading"> Notification </span> <span class="clr-blue">View All</span></p> 
+        <p><span class="master-heading"> Notifications </span> <span class="clr-blue">View All</span></p> 
         <hr> 
           <table mat-table [dataSource]="dataSource2" class="mat-elevation-z8">
   
