--- a/src/app/search-speaker/search-speaker.component.html
+++ b/src/app/search-speaker/search-speaker.component.html
@@ -77,6 +77,7 @@
               <mat-select placeholder="Select Gender">
                 <mat-option value="male">Male</mat-option>
                 <mat-option value="female">Female</mat-option>
+                <mat-option value="other">Other</mat-option>
               </mat-select>
             </mat-form-field>
           </div>
