--- a/src/app/speaker/speaker.component.html
+++ b/src/app/speaker/speaker.component.html
@@ -74,6 +74,7 @@
             <mat-select placeholder="Select Gender">
               <mat-option value="male">Male</mat-option>
               <mat-option value="female">Female</mat-option>
+              <mat-option value="other">Other</mat-option>
             </mat-select>
           </mat-form-field>
         </div>
@@ -117,7 +118,8 @@
           <label>Trained</label>
           <mat-form-field floatLabel="never">
             <mat-select placeholder="Select">
-              <mat-option value="trained">Trained</mat-option>
+              <mat-option value="yes">Yes</mat-option>
+              <mat-option value="no">No</mat-option>
             </mat-select>
           </mat-form-field>
         </div>
@@ -128,7 +130,8 @@
           <label>Contracted</label>
           <mat-form-field floatLabel="never">
             <mat-select placeholder="Select">
-              <mat-option value="trained">Contracted</mat-option>
+              <mat-option value="yes">Yes</mat-option>
+              <mat-option value="no">No</mat-option>
             </mat-select>
           </mat-form-field>
         </div>
@@ -263,6 +266,7 @@
               <mat-select placeholder="Select Gender">
                 <mat-option value="male">Male</mat-option>
                 <mat-option value="female">Female</mat-option>
+                <mat-option value="other">Other</mat-option>
               </mat-select>
             </mat-form-field>
           </div>
@@ -351,6 +355,7 @@
             <mat-select placeholder="Select Gender">
               <mat-option value="male">Male</mat-option>
               <mat-option value="female">Female</mat-option>
+              <mat-option value="other">Other</mat-option>
             </mat-select>
           </mat-form-field>
         </div>
@@ -367,10 +372,11 @@
       </div>
       <div class="col-md-2">
         <div class="form-group">
-          <label>Employee Status</label>
+          <label>Employment Status</label>
           <mat-form-field floatLabel="never">
             <mat-select placeholder="Select">
               <mat-option value="full">Fulltime</mat-option>
+              <mat-option value="permanent">Permanent</mat-option>
             </mat-select>
           </mat-form-field>
         </div>
@@ -454,7 +460,8 @@
           <label>Site of Treatment</label>
           <mat-form-field floatLabel="never">
             <mat-select placeholder="Select">
-              <mat-option value="site">Treatment</mat-option>
+              <mat-option value="home">in home</mat-option>
+              <mat-option value="center">infusion center</mat-option>
             </mat-select>
           </mat-form-field>
         </div>
@@ -466,7 +473,8 @@
           <label>Case Manager</label>
           <mat-form-field floatLabel="never">
             <mat-select placeholder="Select">
-              <mat-option value="case">Manager</mat-option>
+              <mat-option value="yes">Yes</mat-option>
+              <mat-option value="yes">No</mat-option>
             </mat-select>
           </mat-form-field>
         </div>
@@ -493,7 +501,8 @@
           <label>Mail Checks to</label>
           <mat-form-field floatLabel="never">
             <mat-select placeholder="Select">
-              <mat-option value="mail">Mail</mat-option>
+              <mat-option value="patient">Patient</mat-option>
+              <mat-option value="family">Family</mat-option>
             </mat-select>
           </mat-form-field>
         </div>
@@ -503,7 +512,8 @@
           <label>Travel with caregiver required</label>
           <mat-form-field floatLabel="never">
             <mat-select placeholder="Select">
-              <mat-option value="Travel">Travel</mat-option>
+              <mat-option value="yes">Yes</mat-option>
+              <mat-option value="no">No</mat-option>
             </mat-select>
           </mat-form-field>
         </div>
@@ -513,7 +523,8 @@
           <label>Travel with support/comfort animal</label>
           <mat-form-field floatLabel="never">
             <mat-select placeholder="Select">
-              <mat-option value="Travel1">Travel1</mat-option>
+                <mat-option value="yes">Yes</mat-option>
+                <mat-option value="no">No</mat-option>
             </mat-select>
           </mat-form-field>
         </div>
