--- a/src/app/create-event/create-event.component.css
+++ b/src/app/create-event/create-event.component.css
@@ -254,6 +254,7 @@ b, strong {
     box-shadow: 7px 6px 24px -8px rgba(0,0,0,.08);
 }
 hr {
+    border-top: 0.5px solid #B2B2B2;
     margin-top: 10px;  
 }
 .custom-ul{
