--- a/src/app/task-filter/task-filter.component.html
+++ b/src/app/task-filter/task-filter.component.html
@@ -6,7 +6,7 @@
       <div class="row">
         <div class="col-md-4">
           <div class="form-group">
-            <label>Speake Program ID</label>
+            <label>Speaker Program ID</label>
             <mat-form-field>
               <input matInput>
             </mat-form-field>
