--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,87 @@
+<div class="clearfix"></div>
+<div class="col-md-12 custom-top-class">
+<div class="custom-row">
+        <div class="col-md-3">
+            </div>
+    <div class="col-md-6 logo-header">
+            <img src="assets/img/logo-2.png" class="">
+    </div>
+    </div>
+    <div class="col-md-3">
+        </div>
+    <div class="clearfix"></div>
 
+  <div class="col-md-3">
+    </div>
+    <div class="col-md-6 login-forgot-popup-parent">
+        <!-- <img src="/assets/icons/popup-close.png" class="close-position"> -->
+      
+        <div *ngIf="log">
+        <div class="daliog-master-heading">Login to Your Account</div>
+        <hr>
+        <div class="col-md-12 nopadding">
+           <div class="col-md-12 file-info">
+            <div class="form-group">
+                <label>User Name</label>
+                <mat-form-field>
+                    <input matInput placeholder="" value="">
+                </mat-form-field>
+              </div>
+           </div>
+           <div class="col-md-12 file-info">
+            <div class="form-group">
+                <label>Password</label>
+                <mat-form-field>
+                    <input matInput placeholder="" value="">
+                </mat-form-field>
+              </div>
+           </div>
+           <div class="col-md-12 file-info mr-b-0">
+           
+           </div> 
+           <div class="col-md-12 file-info mr-b-0">
+            <div class="form-group">
+                <mat-checkbox #checkbox1>Remember Me</mat-checkbox>
+              </div>
+           </div>  
+           <div class="col-md-12 text-center nopadding">
+                <button mat-button routerLink="/dashboard" [mat-dialog-close]="" class="btn btn-blue">Login</button>
+           </div> 
+           <div class="col-md-12 text-center nopadding">
+            <button mat-button class="btn btn-forgot" (click)="toggle()" #forgot>Forgot Password?</button>
+          </div> 
+        </div>
+    </div>
+       <!-- forgot password -->
+       <div *ngIf="show">
+       <div class="daliog-master-heading">Forgot Password</div>
+        <hr>
+        <div class="col-md-12 nopadding">
+           <div class="col-md-12 file-info">
+            <div class="form-group">
+               <p class="para-forgot">Please enter your Email Address below and click Continue. An email will be sent to 
+                   you with a temporary password.
+            </p>
+            </div>
+           </div>
+           <div class="col-md-12 file-info">
+              <div class="form-group">
+                <label>Email</label>
+                <mat-form-field>
+                    <input matInput placeholder="" value="">
+                </mat-form-field>
+              </div>
+           </div>  
+           <div class="col-md-12 text-center nopadding">
+                <button mat-button [mat-dialog-close]="" class="btn btn-blue mr-tp-30">Continue</button>
+           </div> 
+           <div class="col-md-12 text-center nopadding">
+            <button mat-button class="btn btn-forgot" (click)="toggle()">Go Back</button>
+          </div> 
+        </div>
+       </div>
+    
+    </div>
+    <div class="col-md-3">
+        </div>
+</div>
